deploy_java_app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cityapp-java-sidecar
  labels:
    app: cityapp-java-sidecar
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: cityapp-java-sidecar
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cityapp-restapi-sidecar
  name: cityapp-restapi-sidecar
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cityapp-java-sidecar
  wildcardPolicy: None
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: cityapp-restapi-sidecar
  name: cityapp-restapi-sidecar
spec:
  replicas: 1
  selector:
    app: cityapp-restapi-sidecar
  template:
    metadata:
      labels:
        app: cityapp-restapi-sidecar
    spec:
      serviceAccountName: cityapp-restapi-sidecar
      containers:
        - image: docker-registry.default.svc:5000/cityapp/cityapp:latest
          name: cityapp
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /run/conjur
              name: conjur-access-token
              readOnly: true
        - image: docker-registry.default.svc:5000/cityapp/conjur-kubernetes-authenticator:latest
          imagePullPolicy: Always
          name: authenticator
          volumeMounts:
            - mountPath: /run/conjur
              name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
#      imagePullSecrets:
#        - name: dockerpullsecret
